turtle-pool/kubernetes/pool.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: trtl
  name: pool
  labels:
    app: pool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pool
  template:
    metadata:
      labels:
        app: pool
    spec:
      containers:
        - image: funkypenguin/cryptonote-nodejs-pool
          imagePullPolicy: Always
          command: [ "node" ]
          args: [ "init.js", "-config=/config-workaround-bug/trtl.json" ]
          name: pool
          resources:
            requests:
              memory: "350Mi"
              cpu: "0.1"
          volumeMounts:
            - name: pool-config
              mountPath: /config-workaround-bug/trtl.json
              subPath: trtl.json
            - name: pool-email-txt
              mountPath: /config/email.txt
              subPath: email.txt
        - image: nginx
          name: nginx
          volumeMounts:
            - name: pool-volumeclaim
              mountPath: /usr/share/nginx/html
        - image: funkypenguin/poor-mans-k8s-lb
          imagePullPolicy: Always
          name: 3333-phone-home
        - image: funkypenguin/poor-mans-k8s-lb
          imagePullPolicy: Always
          name: 5555-phone-home
        - image: funkypenguin/poor-mans-k8s-lb
          imagePullPolicy: Always
          name: 7777-phone-home
      volumes:
        - name: pool-config
          configMap:
            name: trtl.json
        - name: pool-email-txt
          configMap:
            name: email.txt 
        - name: pool-volumeclaim
          persistentVolumeClaim:
            claimName: pool-volumeclaim
